--- a/index.html
+++ b/index.html
@@ -221,8 +221,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">ShadowEye – Cybersecurity Platform</h5>
-              <p class="card-text">Modular cybersecurity platform integrating AI-powered threat detection, fraud message classification (ROC-AUC 92.7%), and OWASP-compliant vulnerability scanning.</p>
+              <h5 id="project-1-title" class="card-title">ShadowEye – Cybersecurity Platform</h5>
+              <p id="project-1-desc" class="card-text">Modular cybersecurity platform integrating AI-powered threat detection, fraud message classification (ROC-AUC 92.7%), and OWASP-compliant vulnerability scanning.</p>
               <div class="mt-2">
                 <span class="tag">Python</span>
                 <span class="tag">NLP</span>
@@ -234,8 +234,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">Brain MRI Tumor Segmentation</h5>
-              <p class="card-text">3D U-Net & DynUNet with MONAI for BraTS. Patch-based training, balanced losses, modality dropout and SynthSeg integration.</p>
+              <h5 id="project-2-title" class="card-title">Brain MRI Tumor Segmentation</h5>
+              <p id="project-2-desc" class="card-text">3D U-Net & DynUNet with MONAI for BraTS. Patch-based training, balanced losses, modality dropout and SynthSeg integration.</p>
               <div class="mt-2">
                 <span class="tag">PyTorch</span>
                 <span class="tag">MONAI</span>
@@ -247,8 +247,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">AI Portfolio Projects</h5>
-              <p class="card-text">Collection of machine learning projects including computer vision, NLP, and data analysis implementations with full source code.</p>
+              <h5 id="project-3-title" class="card-title">AI Portfolio Projects</h5>
+              <p id="project-3-desc" class="card-text">Collection of machine learning projects including computer vision, NLP, and data analysis implementations with full source code.</p>
               <div class="mt-2">
                 <span class="tag">Python</span>
                 <span class="tag">ML</span>
@@ -261,8 +261,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">Fraud Detection Pipeline</h5>
-              <p class="card-text">Proxy data + ML for customer behavior modeling. TF-IDF + RandomForest with GridSearchCV integrated into web apps.</p>
+              <h5 id="project-4-title" class="card-title">Fraud Detection Pipeline</h5>
+              <p id="project-4-desc" class="card-text">Proxy data + ML for customer behavior modeling. TF-IDF + RandomForest with GridSearchCV integrated into web apps.</p>
               <div class="mt-2">
                 <span class="tag">sklearn</span>
                 <span class="tag">MLOps</span>
@@ -274,8 +274,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">Parking Spot Detector</h5>
-              <p class="card-text">OpenCV-based real-time parking spot classifier using masks. Steps published on Medium.</p>
+              <h5 id="project-5-title" class="card-title">Parking Spot Detector</h5>
+              <p id="project-5-desc" class="card-text">OpenCV-based real-time parking spot classifier using masks. Steps published on Medium.</p>
               <div class="mt-2">
                 <span class="tag">OpenCV</span>
                 <span class="tag">Computer Vision</span>
@@ -286,8 +286,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">Intel Image Classifier</h5>
-              <p class="card-text">FastAI + ResNet on Intel dataset with Gradio + HuggingFace deployment.</p>
+              <h5 id="project-6-title" class="card-title">Intel Image Classifier</h5>
+              <p id="project-6-desc" class="card-text">FastAI + ResNet on Intel dataset with Gradio + HuggingFace deployment.</p>
               <div class="mt-2">
                 <span class="tag">FastAI</span>
                 <span class="tag">ResNet</span>
@@ -388,8 +388,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">UAV Controller Demo with Python & Google Maps API</h5>
-              <p class="card-text">Python ve Google Maps API ile insansız hava aracı kontrolü demo projesi.</p>
+              <h5 id="article-1-title" class="card-title">UAV Controller Demo with Python & Google Maps API</h5>
+              <p id="article-1-desc" class="card-text">Python ve Google Maps API ile insansız hava aracı kontrolü demo projesi.</p>
               <a href="https://medium.com/@okanolgun980/unmanned-aerial-vehicle-controller-demo-with-python-and-google-maps-api-89ca533b8f55" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
             </div>
           </div>
@@ -397,8 +397,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">AI in Banking & Finance Sector</h5>
-              <p class="card-text">Bankacılık ve finans alanında yapay zekâ uygulamaları ve etkileri.</p>
+              <h5 id="article-2-title" class="card-title">AI in Banking & Finance Sector</h5>
+              <p id="article-2-desc" class="card-text">Bankacılık ve finans alanında yapay zekâ uygulamaları ve etkileri.</p>
               <a href="https://medium.com/@okanolgun980/use-of-artificial-intelligence-in-banking-and-finance-sector-9cd4d24c2704" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
             </div>
           </div>
@@ -406,8 +406,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">Smart Parking Lot Detection with Python</h5>
-              <p class="card-text">OpenCV ile gerçek zamanlı akıllı park yeri tespiti yaklaşımı.</p>
+              <h5 id="article-3-title" class="card-title">Smart Parking Lot Detection with Python</h5>
+              <p id="article-3-desc" class="card-text">OpenCV ile gerçek zamanlı akıllı park yeri tespiti yaklaşımı.</p>
               <a href="https://medium.com/@okanolgun980/smart-parking-lot-detection-with-python-a-deep-dive-into-real-time-computer-vision-1aedebb2737c" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
             </div>
           </div>
@@ -415,8 +415,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">China Real Estate Crisis & House Price Prediction</h5>
-              <p class="card-text">Çin’deki konut krizi ve konut fiyat tahmini üzerine analiz.</p>
+              <h5 id="article-4-title" class="card-title">China Real Estate Crisis & House Price Prediction</h5>
+              <p id="article-4-desc" class="card-text">Çin'deki konut krizi ve konut fiyat tahmini üzerine analiz.</p>
               <a href="https://medium.com/@okanolgun980/the-real-estate-crisis-in-china-the-potential-effects-of-this-crisis-and-predicting-house-prices-2a763385fd21" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
             </div>
           </div>
@@ -424,8 +424,8 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 class="card-title">Intel Image Classification</h5>
-              <p class="card-text">Intel veri setinde sınıflandırma: eğitim ve sonuçlar.</p>
+              <h5 id="article-5-title" class="card-title">Intel Image Classification</h5>
+              <p id="article-5-desc" class="card-text">Intel veri setinde sınıflandırma: eğitim ve sonuçlar.</p>
               <a href="https://medium.com/@okanolgun980/intel-image-classification-89aa4bfe434f" target="_blank" class="btn btn-ghost btn-sm"><i class="bi bi-journal-text me-1"></i> Read Article</a>
             </div>
           </div>
@@ -498,6 +498,21 @@
         hero: { badge: 'AI Engineer • Data Scientist', title: 'Building reliable AI for real-world impact.', sub: 'Production-grade machine learning across medical imaging, cybersecurity, fintech, and energy. From research to deployment with measurable outcomes.', btnEn: 'Download CV (EN)', btnTr: 'Download CV (TR)', quote: '“AI will be the next revolution; and I am coding it.”' },
         sections: { about: 'About', skills: 'Skills', projects: 'Projects', experience: 'Experience', writing: 'Writing', contact: 'Contact' },
         aboutText: "I'm an <b>AI Engineer</b> and <b>Data Scientist</b> focused on building systems that are <b>accurate, robust, and shippable</b>. My recent work includes brain MRI segmentation pipelines (MONAI, SynthSeg), a modular cybersecurity platform with AI-driven detection, and data products for forecasting and optimization. I care about clean engineering, observability, and product impact.",
+        projects: {
+          project1: { title: 'ShadowEye – Cybersecurity Platform', desc: 'Modular cybersecurity platform integrating AI-powered threat detection, fraud message classification (ROC-AUC 92.7%), and OWASP-compliant vulnerability scanning.' },
+          project2: { title: 'Brain MRI Tumor Segmentation', desc: '3D U-Net & DynUNet with MONAI for BraTS. Patch-based training, balanced losses, modality dropout and SynthSeg integration.' },
+          project3: { title: 'AI Portfolio Projects', desc: 'Collection of machine learning projects including computer vision, NLP, and data analysis implementations with full source code.' },
+          project4: { title: 'Fraud Detection Pipeline', desc: 'Proxy data + ML for customer behavior modeling. TF-IDF + RandomForest with GridSearchCV integrated into web apps.' },
+          project5: { title: 'Parking Spot Detector', desc: 'OpenCV-based real-time parking spot classifier using masks. Steps published on Medium.' },
+          project6: { title: 'Intel Image Classifier', desc: 'FastAI + ResNet on Intel dataset with Gradio + HuggingFace deployment.' }
+        },
+        articles: {
+          article1: { title: 'UAV Controller Demo with Python & Google Maps API', desc: 'Python and Google Maps API UAV control demo project.' },
+          article2: { title: 'AI in Banking & Finance Sector', desc: 'Artificial intelligence applications and effects in banking and finance.' },
+          article3: { title: 'Smart Parking Lot Detection with Python', desc: 'Real-time smart parking spot detection approach with OpenCV.' },
+          article4: { title: 'China Real Estate Crisis & House Price Prediction', desc: 'Analysis on China\'s housing crisis and house price prediction.' },
+          article5: { title: 'Intel Image Classification', desc: 'Classification on Intel dataset: training and results.' }
+        },
         experience: {
           exp2025: ['Developed brain MRI segmentation models using 3D U-Net and DynUNet architectures with MONAI framework for tumor detection and analysis', 'Implemented NLP models for automated diagnosis code classification and medical text processing to improve clinical workflow efficiency', 'Led TÜBİTAK 1501 project development focusing on AI-powered medical imaging solutions for healthcare applications', 'Optimized data pipelines and deployed machine learning models in production environments ensuring scalability and reliability', 'Collaborated with medical professionals for clinical validation, feedback integration, and continuous model improvement'],
           expRes: ['Conducted research collaboration with Dr. Küfeoğlu on data-driven energy systems analytics funded by UK Government', 'Performed comprehensive data collection, cleaning, and preprocessing for energy consumption pattern analysis', 'Developed statistical models and predictive analytics for energy optimization and sustainable energy management', 'Prepared academic papers and conference presentations on energy analytics and data-driven decision making'],
@@ -510,6 +525,21 @@
         hero: { badge: 'Yapay Zekâ Mühendisi • Veri Bilimci', title: 'Gerçek dünyada etkisi olan güvenilir yapay zekâ.', sub: 'Medikal görüntüleme, siber güvenlik, finans ve enerjide üretim seviyesinde makine öğrenmesi. Araştırmadan canlı ortama, ölçülebilir sonuçlarla.', btnEn: 'CV İndir (EN)', btnTr: 'CV İndir (TR)', quote: '“Yapay zekâ yeni bir devrim olacak; ben onu kodluyorum.”' },
         sections: { about: 'Hakkımda', skills: 'Yetenekler', projects: 'Projeler', experience: 'Deneyim', writing: 'Yazılar', contact: 'İletişim' },
         aboutText: "<b>Yapay Zekâ Mühendisi</b> ve <b>Veri Bilimci</b> olarak <b>doğru, dayanıklı ve ürünleştirilebilir</b> sistemler geliştiriyorum. Son işlerimde beyin MRI segmentasyonu (MONAI, SynthSeg), yapay zekâ destekli modüler siber güvenlik platformu ve tahmin/optimizasyon odaklı veri ürünleri yer alıyor. Temiz mühendislik, gözlemlenebilirlik ve ürün etkisine önem veriyorum.",
+        projects: {
+          project1: { title: 'ShadowEye – Siber Güvenlik Platformu', desc: 'Yapay zekâ destekli tehdit tespiti, dolandırıcılık mesaj sınıflandırması (ROC-AUC %92.7) ve OWASP uyumlu güvenlik açığı taraması entegre eden modüler siber güvenlik platformu.' },
+          project2: { title: 'Beyin MRI Tümör Segmentasyonu', desc: 'BraTS için MONAI ile 3D U-Net & DynUNet. Patch tabanlı eğitim, dengeli kayıp fonksiyonları, modalite dropout ve SynthSeg entegrasyonu.' },
+          project3: { title: 'Yapay Zekâ Portföy Projeleri', desc: 'Bilgisayarlı görü, NLP ve veri analizi uygulamaları dahil tam kaynak kodlu makine öğrenmesi projeleri koleksiyonu.' },
+          project4: { title: 'Dolandırıcılık Tespiti Hattı', desc: 'Müşteri davranış modellemesi için proxy veri + ML. Web uygulamalarına entegre TF-IDF + RandomForest GridSearchCV.' },
+          project5: { title: 'Park Yeri Dedektörü', desc: 'Maskeler kullanarak OpenCV tabanlı gerçek zamanlı park yeri sınıflandırıcısı. Adımlar Medium\'da yayınlandı.' },
+          project6: { title: 'Intel Görüntü Sınıflandırıcısı', desc: 'Intel veri setinde Gradio + HuggingFace dağıtımı ile FastAI + ResNet.' }
+        },
+        articles: {
+          article1: { title: 'Python ve Google Maps API ile İHA Kontrolcü Demo', desc: 'Python ve Google Maps API ile insansız hava aracı kontrolü demo projesi.' },
+          article2: { title: 'Bankacılık ve Finans Sektöründe Yapay Zekâ', desc: 'Bankacılık ve finans alanında yapay zekâ uygulamaları ve etkileri.' },
+          article3: { title: 'Python ile Akıllı Park Yeri Tespiti', desc: 'OpenCV ile gerçek zamanlı akıllı park yeri tespiti yaklaşımı.' },
+          article4: { title: 'Çin Konut Krizi ve Konut Fiyat Tahmini', desc: 'Çin\'deki konut krizi ve konut fiyat tahmini üzerine analiz.' },
+          article5: { title: 'Intel Görüntü Sınıflandırması', desc: 'Intel veri setinde sınıflandırma: eğitim ve sonuçlar.' }
+        },
         experience: {
           exp2025: ['MONAI framework ile 3D U-Net ve DynUNet mimarileri kullanarak tümör tespiti ve analizi için beyin MRI segmentasyon modelleri geliştirdim', 'Klinik iş akışı verimliliğini artırmak için otomatik tanı kodu sınıflandırması ve tıbbi metin işleme NLP modelleri uyguladım', 'Sağlık uygulamaları için yapay zeka destekli tıbbi görüntüleme çözümlerine odaklanan TÜBİTAK 1501 proje geliştirmesini yönettim', 'Ölçeklenebilirlik ve güvenilirlik sağlayarak üretim ortamlarında veri hatlarını optimize ettim ve makine öğrenmesi modellerini dağıttım', 'Klinik doğrulama, geri bildirim entegrasyonu ve sürekli model iyileştirme için tıp profesyonelleri ile işbirliği yaptım'],
           expRes: ['İngiltere Hükümeti tarafından fonlanan Dr. Küfeoğlu ile veri odaklı enerji sistemleri analitiği araştırma işbirliği yürüttüm', 'Enerji tüketim kalıbı analizi için kapsamlı veri toplama, temizleme ve ön işleme gerçekleştirdim', 'Enerji optimizasyonu ve sürdürülebilir enerji yönetimi için istatistiksel modeller ve tahmin analitiği geliştirdim', 'Enerji analitiği ve veri odaklı karar verme konularında akademik makaleler ve konferans sunumları hazırladım'],
@@ -539,6 +569,24 @@
       document.getElementById('contact-title').textContent = dict.sections.contact;
       document.getElementById('about-text').innerHTML = dict.aboutText;
       document.getElementById('hero-quote').textContent = dict.hero.quote;
+      // Update projects
+      for (let i = 1; i <= 6; i++) {
+        const titleEl = document.getElementById(`project-${i}-title`);
+        const descEl = document.getElementById(`project-${i}-desc`);
+        if (titleEl && descEl && dict.projects[`project${i}`]) {
+          titleEl.textContent = dict.projects[`project${i}`].title;
+          descEl.textContent = dict.projects[`project${i}`].desc;
+        }
+      }
+      // Update articles
+      for (let i = 1; i <= 5; i++) {
+        const titleEl = document.getElementById(`article-${i}-title`);
+        const descEl = document.getElementById(`article-${i}-desc`);
+        if (titleEl && descEl && dict.articles[`article${i}`]) {
+          titleEl.textContent = dict.articles[`article${i}`].title;
+          descEl.textContent = dict.articles[`article${i}`].desc;
+        }
+      }
       // Update experience details
       const expIds = ['exp2025', 'expRes', 'exp2024', 'exp2023'];
       expIds.forEach(id => {
