--- a/index.html
+++ b/index.html
@@ -221,12 +221,12 @@
         <div class="col-md-6">
           <div class="card h-100">
             <div class="card-body">
-              <h5 id="project-1-title" class="card-title">parking-spot-detector</h5>
-              <p id="project-1-desc" class="card-text">OpenCV tabanlı park yeri tespiti (Jupyter).</p>
+              <h5 id="project-1-title" class="card-title">ShadowEye – Cybersecurity Platform</h5>
+              <p id="project-1-desc" class="card-text">Modüler siber güvenlik platformu: AI tabanlı tehdit tespiti ve mesaj sınıflandırma.</p>
               <div class="mt-2">
-                <span class="tag">OpenCV</span><span class="tag">Jupyter</span>
+                <span class="tag">Python</span><span class="tag">NLP</span><span class="tag">Security</span>
               </div>
-              <a href="https://github.com/okanolgun/parking-spot-detector" target="_blank" class="btn btn-ghost btn-sm mt-2"><i class="bi bi-github me-1"></i> Source</a>
+              <a href="https://github.com/okanolgun?tab=repositories" target="_blank" class="btn btn-ghost btn-sm mt-2"><i class="bi bi-github me-1"></i> Source</a>
             </div>
           </div>
         </div>
@@ -354,18 +354,6 @@
           <a href="https://github.com/okanolgun?tab=repositories" target="_blank" class="btn btn-ghost w-100 h-100 d-flex align-items-center justify-content-center" style="min-height:110px;">
             <i class="bi bi-plus-circle me-2"></i> Show More on GitHub
           </a>
-        </div>
-        <div class="col-md-6">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 id="project-12-title" class="card-title">ShadowEye – Cybersecurity Platform</h5>
-              <p id="project-12-desc" class="card-text">Modüler siber güvenlik platformu: AI tabanlı tehdit tespiti ve mesaj sınıflandırma.</p>
-              <div class="mt-2">
-                <span class="tag">Python</span><span class="tag">NLP</span><span class="tag">Security</span>
-              </div>
-              <a href="https://github.com/okanolgun?tab=repositories" target="_blank" class="btn btn-ghost btn-sm mt-2"><i class="bi bi-github me-1"></i> Source</a>
-            </div>
-          </div>
         </div>
       </div>
     </div>
@@ -570,7 +558,7 @@
         sections: { about: 'About', skills: 'Skills', projects: 'Projects', experience: 'Experience', writing: 'Writing', contact: 'Contact' },
         aboutText: "I'm an <b>AI Engineer</b> and <b>Data Scientist</b> focused on building systems that are <b>accurate, robust, and shippable</b>. My recent work includes brain MRI segmentation pipelines (MONAI, SynthSeg), a modular cybersecurity platform with AI-driven detection, and data products for forecasting and optimization. I care about clean engineering, observability, and product impact.",
         projects: {
-          project1: { title: 'parking-spot-detector', desc: 'OpenCV-based parking spot detection (Jupyter).' },
+          project1: { title: 'ShadowEye – Cybersecurity Platform', desc: 'Modular cybersecurity platform with AI threat detection and message classification.' },
           project2: { title: 'UAV-Flight-Demo', desc: 'Drone flight simulator with coordinates (Python, MIT).' },
           project3: { title: 'Image-Classification-with-Neural-Networks', desc: 'Image classification (Python).' },
           project4: { title: 'E-commerece-Product-Recommendation-machineLearning', desc: 'E-commerce product recommendation system (Jupyter).' },
@@ -603,7 +591,7 @@
         sections: { about: 'Hakkımda', skills: 'Yetenekler', projects: 'Projeler', experience: 'Deneyim', writing: 'Yazılar', contact: 'İletişim' },
         aboutText: "<b>Yapay Zekâ Mühendisi</b> ve <b>Veri Bilimci</b> olarak <b>doğru, dayanıklı ve ürünleştirilebilir</b> sistemler geliştiriyorum. Son işlerimde beyin MRI segmentasyonu (MONAI, SynthSeg), yapay zekâ destekli modüler siber güvenlik platformu ve tahmin/optimizasyon odaklı veri ürünleri yer alıyor. Temiz mühendislik, gözlemlenebilirlik ve ürün etkisine önem veriyorum.",
         projects: {
-          project1: { title: 'parking-spot-detector', desc: 'OpenCV tabanlı park yeri tespiti (Jupyter).' },
+          project1: { title: 'ShadowEye – Siber Güvenlik Platformu', desc: 'AI tabanlı tehdit tespiti ve mesaj sınıflandırması içeren modüler siber güvenlik platformu.' },
           project2: { title: 'UAV-Flight-Demo', desc: 'Koordinatlarla drone uçuş simülatörü (Python, MIT).' },
           project3: { title: 'Image-Classification-with-Neural-Networks', desc: 'Görüntü sınıflandırma (Python).' },
           project4: { title: 'E-commerece-Product-Recommendation-machineLearning', desc: 'E-ticaret ürün öneri sistemi (Jupyter).' },
