--- a/index.html
+++ b/index.html
@@ -3,99 +3,93 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
   <title>Okan Olgun – Applied AI Engineer</title>
 
   <meta name="description"
-    content="Applied AI Engineer building production-grade, low-latency AI systems for medical imaging, defense, and real-time signal-driven applications."/>
+    content="Applied AI Engineer working on 3D computer vision, real-time AI systems, and production-grade machine learning." />
 
-  <meta name="theme-color" content="#0ea5e9"/>
-
-  <link rel="icon" href="/favicon.ico"/>
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png"/>
-
+  <link rel="icon" href="/favicon.ico" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet"/>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet"/>
 
   <style>
     :root {
-      --brand:#0ea5e9;
-      --brand-2:#8b5cf6;
-      --text:#e2e8f0;
-      --muted:#94a3b8;
       --bg:#0b1220;
       --card:#0f172a;
       --border:#1e293b;
-      --shadow:0 10px 30px rgba(0,0,0,.45);
+      --text:#e2e8f0;
+      --muted:#94a3b8;
+      --brand:#38bdf8;
     }
+
     body {
       font-family: Inter, system-ui;
       background: var(--bg);
       color: var(--text);
       scroll-behavior: smooth;
     }
+
+    section { scroll-margin-top: 90px; }
+
     .card {
       background: var(--card);
       border: 1px solid var(--border);
-      box-shadow: var(--shadow);
     }
-    .badge-soft {
-      background: rgba(148,163,184,.15);
-      border:1px solid var(--border);
-    }
-    .skill-badge {
-      padding:.45rem .7rem;
-      border-radius:10px;
-      background: rgba(14,165,233,.1);
-      border:1px solid var(--border);
-      font-size:.85rem;
-      margin:.25rem;
+
+    .tag {
       display:inline-block;
+      padding:.4rem .7rem;
+      margin:.2rem;
+      border-radius:999px;
+      border:1px solid var(--border);
+      background:rgba(56,189,248,.08);
+      font-size:.85rem;
     }
-    section { scroll-margin-top:90px; }
+
+    a { color: var(--brand); text-decoration: none; }
+    a:hover { text-decoration: underline; }
   </style>
 </head>
 
-<body data-bs-theme="dark">
+<body>
 
-<!-- NAVBAR -->
+<!-- NAV -->
 <nav class="navbar navbar-expand-lg fixed-top bg-dark border-bottom">
   <div class="container">
     <a class="navbar-brand fw-bold" href="#hero">Okan Olgun</a>
-    <div class="collapse navbar-collapse show">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
-        <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
-        <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
-    </div>
+    <ul class="navbar-nav ms-auto">
+      <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
+      <li class="nav-item"><a class="nav-link" href="#focus">Focus</a></li>
+      <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
+      <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
+      <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+    </ul>
   </div>
 </nav>
 
 <!-- HERO -->
 <section id="hero" class="min-vh-100 d-flex align-items-center">
   <div class="container">
-    <span class="badge badge-soft mb-3">
-      Applied AI Engineer • 3D Computer Vision • Real-Time Systems
-    </span>
-
     <h1 class="display-4 fw-bold">
-      Production-grade AI for medical imaging, defense, and real-time systems.
+      Applied AI Engineer
     </h1>
+    <p class="lead mt-3" style="max-width:820px;">
+      I build <b>production-grade AI systems</b> with a focus on
+      <b>3D computer vision</b>, <b>real-time inference</b>, and
+      <b>end-to-end machine learning pipelines</b>.
+    </p>
 
-    <p class="lead mt-3" style="max-width:820px">
-      I design and deploy low-latency, high-reliability AI systems — from
-      <b>3D medical image segmentation</b> to
-      <b>embedded computer vision and signal-aware ML pipelines</b>,
-      bridging academic research with real-world constraints.
+    <p class="text-muted mt-3" style="max-width:820px;">
+      My work sits at the intersection of research, engineering, and real-world constraints —
+      turning complex data and signals into reliable, deployable systems.
     </p>
 
     <div class="mt-4">
-      <a href="/Okan_Olgun_resume.pdf" class="btn btn-outline-light btn-lg me-2">Download CV</a>
-      <a href="https://github.com/okanolgun" class="btn btn-outline-light btn-lg me-2">GitHub</a>
-      <a href="https://www.linkedin.com/in/okanolgun06/" class="btn btn-outline-light btn-lg">LinkedIn</a>
+      <a href="/Okan_Olgun_resume.pdf" class="me-3">CV</a>
+      <a href="https://github.com/okanolgun" class="me-3">GitHub</a>
+      <a href="https://www.linkedin.com/in/okanolgun06/" class="me-3">LinkedIn</a>
+      <a href="https://medium.com/@okanolgun980">Medium</a>
     </div>
   </div>
 </section>
@@ -104,51 +98,56 @@
 <section id="about" class="py-5">
   <div class="container">
     <h2 class="fw-bold mb-3">About</h2>
-    <p style="max-width:900px">
-      I am an <b>Applied AI Engineer</b> specializing in
-      <b>3D computer vision, real-time AI systems, and signal-aware machine learning</b>.
+    <p style="max-width:900px;">
+      I am an <b>Applied AI Engineer</b> with experience across
+      medical imaging, cybersecurity, finance, and energy systems.
       <br><br>
-      My work focuses on building <b>production-ready ML pipelines</b> under strict
-      constraints such as latency, memory, accuracy, and deployment feasibility.
-      I have delivered end-to-end systems covering
-      data standardization, model development, optimization (FP16/INT8),
-      and cloud or edge deployment.
+      I specialize in building AI systems that are not only accurate,
+      but also <b>robust, explainable, and deployable</b>.
+      My work often involves operating under real-world constraints
+      such as limited data, latency requirements, and system-level trade-offs.
       <br><br>
-      I enjoy working at the intersection of <b>research, engineering, and measurable product impact</b>.
+      I enjoy working on problems where AI meets systems engineering,
+      and where results are measured in practical impact rather than benchmarks alone.
     </p>
   </div>
 </section>
 
-<!-- SKILLS -->
-<section id="skills" class="py-5">
+<!-- FOCUS -->
+<section id="focus" class="py-5">
   <div class="container">
-    <h2 class="fw-bold mb-3">Core Skills</h2>
+    <h2 class="fw-bold mb-3">Current Focus</h2>
 
     <div class="card p-3 mb-3">
-      <h6 class="text-muted">AI & Computer Vision</h6>
-      <span class="skill-badge">PyTorch</span>
-      <span class="skill-badge">MONAI</span>
-      <span class="skill-badge">3D U-Net</span>
-      <span class="skill-badge">DynUNet</span>
-      <span class="skill-badge">Object Detection</span>
+      <b>3D Computer Vision & Medical Imaging</b>
+      <p class="text-muted mb-1">
+        3D segmentation, volumetric data processing, clinical imaging workflows
+      </p>
+      <span class="tag">3D U-Net</span>
+      <span class="tag">MONAI</span>
+      <span class="tag">NIfTI / DICOM</span>
     </div>
 
     <div class="card p-3 mb-3">
-      <h6 class="text-muted">Real-Time & Systems AI</h6>
-      <span class="skill-badge">C++ (C++14/17)</span>
-      <span class="skill-badge">CUDA</span>
-      <span class="skill-badge">TensorRT</span>
-      <span class="skill-badge">FP16 / INT8 Optimization</span>
-      <span class="skill-badge">Low-Latency Inference</span>
-      <span class="skill-badge">Embedded AI</span>
+      <b>Real-Time & Systems-Oriented AI</b>
+      <p class="text-muted mb-1">
+        Low-latency inference, model optimization, system-level design
+      </p>
+      <span class="tag">C++</span>
+      <span class="tag">CUDA</span>
+      <span class="tag">TensorRT</span>
+      <span class="tag">FP16 / INT8</span>
     </div>
 
     <div class="card p-3">
-      <h6 class="text-muted">Data & Deployment</h6>
-      <span class="skill-badge">Python</span>
-      <span class="skill-badge">SQL</span>
-      <span class="skill-badge">Microservices</span>
-      <span class="skill-badge">Cloud Deployment</span>
+      <b>End-to-End Machine Learning</b>
+      <p class="text-muted mb-1">
+        From data pipelines to deployment and monitoring
+      </p>
+      <span class="tag">Python</span>
+      <span class="tag">PyTorch</span>
+      <span class="tag">SQL</span>
+      <span class="tag">Microservices</span>
     </div>
   </div>
 </section>
@@ -159,20 +158,27 @@
     <h2 class="fw-bold mb-3">Experience</h2>
 
     <div class="card p-3 mb-3">
-      <h5>AI Engineer – IsıTech (2025–Present)</h5>
-      <ul>
-        <li>Reduced manual 3D medical image segmentation time from <b>3–4 hours to 1–2 minutes</b>.</li>
-        <li>Built domestic 3D segmentation systems achieving <b>Dice 0.77 (tumor)</b> and <b>0.70 (vascular)</b>.</li>
-        <li>Designed task-specific 3D architectures robust to MRI variability.</li>
-        <li>Developed end-to-end pipelines covering preprocessing, training, validation, and deployment.</li>
+      <b>AI Engineer – IsıTech</b> <span class="text-muted">(2025–Present)</span>
+      <ul class="mt-2">
+        <li>Designed and deployed 3D medical image segmentation systems for clinical use.</li>
+        <li>Reduced manual segmentation time from hours to minutes.</li>
+        <li>Built end-to-end AI pipelines covering data, training, validation, and deployment.</li>
+      </ul>
+    </div>
+
+    <div class="card p-3 mb-3">
+      <b>Data Scientist – Mono Payments</b> <span class="text-muted">(2024)</span>
+      <ul class="mt-2">
+        <li>Developed ML models for customer behavior and sales forecasting.</li>
+        <li>Worked with real-world transactional and behavioral data at scale.</li>
       </ul>
     </div>
 
     <div class="card p-3">
-      <h5>Data Scientist – Mono Payments (2024)</h5>
-      <ul>
-        <li>Built ML models for customer behavior, sales forecasting, and fraud detection.</li>
-        <li>Delivered data-driven insights improving engagement and revenue metrics.</li>
+      <b>Research Assistant – Data-Driven Energy Systems</b>
+      <ul class="mt-2">
+        <li>Research on digital technologies and analytics in energy systems.</li>
+        <li>Quantitative analysis and academic collaboration.</li>
       </ul>
     </div>
   </div>
@@ -184,21 +190,33 @@
     <h2 class="fw-bold mb-3">Selected Projects</h2>
 
     <div class="card p-3 mb-3">
-      <h5>High-Performance Aerial Threat Detection & Telemetry Analysis</h5>
-      <ul>
-        <li>Real-time embedded AI system for UAV/SUAV environments.</li>
-        <li>C++ CV pipeline with YOLO + Kalman tracking.</li>
-        <li>TensorRT + CUDA optimization achieving <b>3–4× speedup</b>.</li>
-        <li>Sub-millisecond inference via FP16/INT8 quantization.</li>
-      </ul>
+      <b>High-Performance Aerial Threat Detection System</b>
+      <p class="text-muted mb-1">
+        Real-time computer vision and telemetry analysis system
+        designed for embedded environments.
+      </p>
+      <span class="tag">Real-Time AI</span>
+      <span class="tag">C++</span>
+      <span class="tag">Computer Vision</span>
+    </div>
+
+    <div class="card p-3 mb-3">
+      <b>ShadowEye – AI-Driven Cybersecurity Platform</b>
+      <p class="text-muted mb-1">
+        AI-based detection of leaked and sensitive data from online sources.
+      </p>
+      <span class="tag">NLP</span>
+      <span class="tag">Security</span>
+      <span class="tag">Machine Learning</span>
     </div>
 
     <div class="card p-3">
-      <h5>ShadowEye – AI-Driven Cybersecurity Platform</h5>
-      <ul>
-        <li>Near real-time breach detection (~5 minutes).</li>
-        <li>360 ML models trained, achieving <b>92.7% ROC-AUC</b>.</li>
-      </ul>
+      <b>PERSANAVI – Personalized Surgical Anatomy Viewer</b>
+      <p class="text-muted mb-1">
+        AI-powered 3D segmentation for personalized medical visualization.
+      </p>
+      <span class="tag">Medical Imaging</span>
+      <span class="tag">3D Segmentation</span>
     </div>
   </div>
 </section>
@@ -208,7 +226,7 @@
   <div class="container">
     <h2 class="fw-bold mb-3">Contact</h2>
     <p>Email: <a href="mailto:oknolgn28@gmail.com">oknolgn28@gmail.com</a></p>
-    <p>Ankara, Turkey • Open to relocation (Germany)</p>
+    <p>Ankara, Turkey</p>
   </div>
 </section>
 
