--- a/index.html
+++ b/index.html
@@ -2,12 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-
   <title>Okan Olgun – Applied AI Engineer</title>
-
-  <meta name="description"
-    content="Applied AI Engineer working on 3D computer vision, real-time AI systems, and production-grade machine learning." />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="Applied AI Engineer with experience in 3D computer vision, real-time AI systems, and production-grade machine learning."/>
 
   <link rel="icon" href="/favicon.ico" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"/>
@@ -22,21 +19,17 @@
       --muted:#94a3b8;
       --brand:#38bdf8;
     }
-
     body {
       font-family: Inter, system-ui;
       background: var(--bg);
       color: var(--text);
       scroll-behavior: smooth;
     }
-
     section { scroll-margin-top: 90px; }
-
     .card {
       background: var(--card);
       border: 1px solid var(--border);
     }
-
     .tag {
       display:inline-block;
       padding:.4rem .7rem;
@@ -46,9 +39,15 @@
       background:rgba(56,189,248,.08);
       font-size:.85rem;
     }
-
-    a { color: var(--brand); text-decoration: none; }
-    a:hover { text-decoration: underline; }
+    a { color: var(--brand); text-decoration:none; }
+    a:hover { text-decoration:underline; }
+    .avatar {
+      width:180px;
+      height:180px;
+      border-radius:50%;
+      object-fit:cover;
+      border:2px solid var(--border);
+    }
   </style>
 </head>
 
@@ -59,96 +58,53 @@
   <div class="container">
     <a class="navbar-brand fw-bold" href="#hero">Okan Olgun</a>
     <ul class="navbar-nav ms-auto">
-      <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
-      <li class="nav-item"><a class="nav-link" href="#focus">Focus</a></li>
+      <li class="nav-item"><a class="nav-link" href="#summary">Summary</a></li>
+      <li class="nav-item"><a class="nav-link" href="#skills">Skills</a></li>
       <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
       <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
-      <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      <li class="nav-item"><a class="nav-link" href="#education">Education</a></li>
+      <li class="nav-item ms-3">
+        <button id="langEN" class="btn btn-sm btn-outline-light">EN</button>
+        <button id="langTR" class="btn btn-sm btn-outline-light">TR</button>
+      </li>
     </ul>
   </div>
 </nav>
 
 <!-- HERO -->
 <section id="hero" class="min-vh-100 d-flex align-items-center">
-  <div class="container">
-    <h1 class="display-4 fw-bold">
-      Applied AI Engineer
-    </h1>
-    <p class="lead mt-3" style="max-width:820px;">
-      I build <b>production-grade AI systems</b> with a focus on
-      <b>3D computer vision</b>, <b>real-time inference</b>, and
-      <b>end-to-end machine learning pipelines</b>.
+  <div class="container text-center">
+    <img src="/avatar.jpg" class="avatar mb-3" alt="Okan Olgun"/>
+    <h1 class="fw-bold">Okan Olgun</h1>
+    <p id="hero-title" class="lead">Applied AI Engineer</p>
+
+    <p class="text-muted">
+      Ankara, Turkey ·
+      <a href="mailto:oknolgn28@gmail.com">oknolgn28@gmail.com</a>
     </p>
 
-    <p class="text-muted mt-3" style="max-width:820px;">
-      My work sits at the intersection of research, engineering, and real-world constraints —
-      turning complex data and signals into reliable, deployable systems.
-    </p>
-
-    <div class="mt-4">
-      <a href="/Okan_Olgun_resume.pdf" class="me-3">CV</a>
+    <div class="mt-3">
+      <a href="/Okan_Olgun_resume.pdf" class="me-3">Download CV (EN)</a>
+      <a href="/Okan_Olgun_ozgecmis.pdf" class="me-3">CV İndir (TR)</a>
       <a href="https://github.com/okanolgun" class="me-3">GitHub</a>
-      <a href="https://www.linkedin.com/in/okanolgun06/" class="me-3">LinkedIn</a>
-      <a href="https://medium.com/@okanolgun980">Medium</a>
+      <a href="https://www.linkedin.com/in/okanolgun06/">LinkedIn</a>
     </div>
   </div>
 </section>
 
-<!-- ABOUT -->
-<section id="about" class="py-5">
+<!-- SUMMARY -->
+<section id="summary" class="py-5">
   <div class="container">
-    <h2 class="fw-bold mb-3">About</h2>
-    <p style="max-width:900px;">
-      I am an <b>Applied AI Engineer</b> with experience across
-      medical imaging, cybersecurity, finance, and energy systems.
-      <br><br>
-      I specialize in building AI systems that are not only accurate,
-      but also <b>robust, explainable, and deployable</b>.
-      My work often involves operating under real-world constraints
-      such as limited data, latency requirements, and system-level trade-offs.
-      <br><br>
-      I enjoy working on problems where AI meets systems engineering,
-      and where results are measured in practical impact rather than benchmarks alone.
-    </p>
+    <h2 class="fw-bold mb-3">Summary</h2>
+    <p id="summary-text"></p>
   </div>
 </section>
 
-<!-- FOCUS -->
-<section id="focus" class="py-5">
+<!-- SKILLS -->
+<section id="skills" class="py-5">
   <div class="container">
-    <h2 class="fw-bold mb-3">Current Focus</h2>
-
-    <div class="card p-3 mb-3">
-      <b>3D Computer Vision & Medical Imaging</b>
-      <p class="text-muted mb-1">
-        3D segmentation, volumetric data processing, clinical imaging workflows
-      </p>
-      <span class="tag">3D U-Net</span>
-      <span class="tag">MONAI</span>
-      <span class="tag">NIfTI / DICOM</span>
-    </div>
-
-    <div class="card p-3 mb-3">
-      <b>Real-Time & Systems-Oriented AI</b>
-      <p class="text-muted mb-1">
-        Low-latency inference, model optimization, system-level design
-      </p>
-      <span class="tag">C++</span>
-      <span class="tag">CUDA</span>
-      <span class="tag">TensorRT</span>
-      <span class="tag">FP16 / INT8</span>
-    </div>
-
-    <div class="card p-3">
-      <b>End-to-End Machine Learning</b>
-      <p class="text-muted mb-1">
-        From data pipelines to deployment and monitoring
-      </p>
-      <span class="tag">Python</span>
-      <span class="tag">PyTorch</span>
-      <span class="tag">SQL</span>
-      <span class="tag">Microservices</span>
-    </div>
+    <h2 class="fw-bold mb-3">Core Skills</h2>
+    <div id="skills-content"></div>
   </div>
 </section>
 
@@ -156,31 +112,7 @@
 <section id="experience" class="py-5">
   <div class="container">
     <h2 class="fw-bold mb-3">Experience</h2>
-
-    <div class="card p-3 mb-3">
-      <b>AI Engineer – IsıTech</b> <span class="text-muted">(2025–Present)</span>
-      <ul class="mt-2">
-        <li>Designed and deployed 3D medical image segmentation systems for clinical use.</li>
-        <li>Reduced manual segmentation time from hours to minutes.</li>
-        <li>Built end-to-end AI pipelines covering data, training, validation, and deployment.</li>
-      </ul>
-    </div>
-
-    <div class="card p-3 mb-3">
-      <b>Data Scientist – Mono Payments</b> <span class="text-muted">(2024)</span>
-      <ul class="mt-2">
-        <li>Developed ML models for customer behavior and sales forecasting.</li>
-        <li>Worked with real-world transactional and behavioral data at scale.</li>
-      </ul>
-    </div>
-
-    <div class="card p-3">
-      <b>Research Assistant – Data-Driven Energy Systems</b>
-      <ul class="mt-2">
-        <li>Research on digital technologies and analytics in energy systems.</li>
-        <li>Quantitative analysis and academic collaboration.</li>
-      </ul>
-    </div>
+    <div id="experience-content"></div>
   </div>
 </section>
 
@@ -188,47 +120,96 @@
 <section id="projects" class="py-5">
   <div class="container">
     <h2 class="fw-bold mb-3">Selected Projects</h2>
-
-    <div class="card p-3 mb-3">
-      <b>High-Performance Aerial Threat Detection System</b>
-      <p class="text-muted mb-1">
-        Real-time computer vision and telemetry analysis system
-        designed for embedded environments.
-      </p>
-      <span class="tag">Real-Time AI</span>
-      <span class="tag">C++</span>
-      <span class="tag">Computer Vision</span>
-    </div>
-
-    <div class="card p-3 mb-3">
-      <b>ShadowEye – AI-Driven Cybersecurity Platform</b>
-      <p class="text-muted mb-1">
-        AI-based detection of leaked and sensitive data from online sources.
-      </p>
-      <span class="tag">NLP</span>
-      <span class="tag">Security</span>
-      <span class="tag">Machine Learning</span>
-    </div>
-
-    <div class="card p-3">
-      <b>PERSANAVI – Personalized Surgical Anatomy Viewer</b>
-      <p class="text-muted mb-1">
-        AI-powered 3D segmentation for personalized medical visualization.
-      </p>
-      <span class="tag">Medical Imaging</span>
-      <span class="tag">3D Segmentation</span>
-    </div>
+    <div id="projects-content"></div>
   </div>
 </section>
 
-<!-- CONTACT -->
-<section id="contact" class="py-5">
+<!-- EDUCATION -->
+<section id="education" class="py-5">
   <div class="container">
-    <h2 class="fw-bold mb-3">Contact</h2>
-    <p>Email: <a href="mailto:oknolgn28@gmail.com">oknolgn28@gmail.com</a></p>
-    <p>Ankara, Turkey</p>
+    <h2 class="fw-bold mb-3">Education</h2>
+    <div id="education-content"></div>
   </div>
 </section>
+
+<script>
+const content = {
+  en: {
+    summary: `Applied AI Engineer with hands-on experience in 3D computer vision, NLP, and end-to-end machine learning systems. Specialized in 3D segmentation and advanced computer vision architectures, including defense-sector and medical imaging use cases. Proven track record in building production-ready ML pipelines from data preparation to deployment. Experience in bridging academic research with real-world production constraints and leading small research teams.`,
+    skills: `
+      <div class="card p-3 mb-3"><b>AI & ML</b><div class="tag">Deep Learning</div><div class="tag">End-to-End ML Systems</div></div>
+      <div class="card p-3 mb-3"><b>Computer Vision</b><div class="tag">2D/3D CV</div><div class="tag">3D Segmentation</div><div class="tag">Medical Imaging</div></div>
+      <div class="card p-3 mb-3"><b>Systems & Deployment</b><div class="tag">Embedded AI</div><div class="tag">Low-Latency Inference</div><div class="tag">FP16 / INT8</div></div>
+      <div class="card p-3"><b>Programming</b><div class="tag">Python</div><div class="tag">C++</div><div class="tag">CUDA</div><div class="tag">TensorRT</div></div>
+    `,
+    experience: `
+      <div class="card p-3 mb-3"><b>AI Engineer – IsıTech (2025–Present)</b>
+        <ul>
+          <li>Reduced manual 3D medical image segmentation time from 3–4 hours to 1–2 minutes.</li>
+          <li>Built domestic 3D segmentation systems achieving Dice scores up to 0.77.</li>
+          <li>Developed end-to-end AI pipelines and microservices deployments.</li>
+        </ul>
+      </div>
+      <div class="card p-3 mb-3"><b>Data Scientist – Mono Payments (2024)</b>
+        <ul>
+          <li>Built ML models for customer behavior and sales forecasting.</li>
+        </ul>
+      </div>
+    `,
+    projects: `
+      <div class="card p-3 mb-3"><b>High-Performance Aerial Threat Detection</b>
+        <p>Real-time UAV/SUAV detection system optimized for embedded environments.</p>
+      </div>
+      <div class="card p-3 mb-3"><b>PERSANAVI – Personalized Surgical Anatomy Viewer</b>
+        <p>AI-based 3D segmentation for medical visualization.</p>
+      </div>
+      <div class="card p-3"><b>ShadowEye – AI-Driven Cybersecurity Platform</b>
+        <p>Near real-time breach detection using NLP-based ML models.</p>
+      </div>
+    `,
+    education: `
+      <div class="card p-3 mb-3"><b>TED University</b> – B.S.E. Computer Engineering (English)<br/>Minor: Applied Data Analytics</div>
+      <div class="card p-3"><b>Ankara Atatürk High School</b> – English & German Preparatory Program</div>
+    `
+  },
+  tr: {
+    summary: `3B bilgisayarlı görü, NLP ve uçtan uca makine öğrenmesi sistemlerinde deneyime sahip Yapay Zekâ Mühendisi. Savunma ve medikal görüntüleme kullanım alanlarını kapsayan 3B segmentasyon ve ileri seviye bilgisayarlı görü mimarilerinde uzmanlaşmıştır. Veri hazırlamadan canlı ortama almaya kadar üretim seviyesinde ML sistemleri geliştirme tecrübesine sahiptir.`,
+    skills: `
+      <div class="card p-3 mb-3"><b>Yapay Zekâ & ML</b><div class="tag">Derin Öğrenme</div><div class="tag">Uçtan Uca ML</div></div>
+      <div class="card p-3 mb-3"><b>Bilgisayarlı Görü</b><div class="tag">2B/3B CV</div><div class="tag">Medikal Görüntüleme</div></div>
+      <div class="card p-3"><b>Sistemler</b><div class="tag">Gömülü AI</div><div class="tag">Düşük Gecikme</div></div>
+    `,
+    experience: `
+      <div class="card p-3 mb-3"><b>Yapay Zekâ Mühendisi – IsıTech</b>
+        <ul>
+          <li>Manuel 3B segmentasyon süresi saatlerden dakikalara düşürüldü.</li>
+          <li>Yerli 3B segmentasyon sistemleri geliştirildi.</li>
+        </ul>
+      </div>
+    `,
+    projects: `
+      <div class="card p-3 mb-3"><b>Hava Tehdit Tespit Sistemi</b>
+        <p>Gerçek zamanlı gömülü bilgisayarlı görü sistemi.</p>
+      </div>
+    `,
+    education: `
+      <div class="card p-3 mb-3"><b>TED Üniversitesi</b> – Bilgisayar Mühendisliği</div>
+    `
+  }
+};
+
+function setLang(lang){
+  document.getElementById("summary-text").innerHTML = content[lang].summary;
+  document.getElementById("skills-content").innerHTML = content[lang].skills;
+  document.getElementById("experience-content").innerHTML = content[lang].experience;
+  document.getElementById("projects-content").innerHTML = content[lang].projects;
+  document.getElementById("education-content").innerHTML = content[lang].education;
+}
+
+setLang("en");
+document.getElementById("langEN").onclick = () => setLang("en");
+document.getElementById("langTR").onclick = () => setLang("tr");
+</script>
 
 </body>
 </html>
