--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Okan Olgun – AI Engineer & Data Scientist</title>
 
   <meta name="description" content="AI Engineer & Data Scientist building production-grade AI systems.">
-  <meta name="theme-color" content="#0ea5e9">
+  <meta name="theme-color" content="#0b1220">
 
   <link rel="icon" href="/favicon.ico">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -23,6 +23,9 @@
       --card:#ffffff;
       --border:#e2e8f0;
       --shadow:0 10px 30px rgba(2,6,23,.06);
+      --ring: 0 0 0 .25rem rgba(14,165,233,.25);
+      --radius: 16px;
+      --hero-overlay: rgba(248,250,252,.75);
     }
     [data-bs-theme="dark"] {
       --text:#e2e8f0;
@@ -31,19 +34,29 @@
       --card:#0f172a;
       --border:#1e293b;
       --shadow:0 10px 30px rgba(0,0,0,.45);
+      --ring: 0 0 0 .25rem rgba(56,189,248,.25);
+      --hero-overlay: rgba(15,23,42,.6);
     }
 
     body {
-      font-family:Inter,system-ui;
+      font-family: Inter, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Apple Color Emoji", "Segoe UI Emoji";
       background:var(--bg);
       color:var(--text);
       scroll-behavior:smooth;
+      text-rendering: optimizeLegibility;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
     }
 
     .navbar {
       backdrop-filter:saturate(180%) blur(8px);
-      background:rgba(15,23,42,.7)!important;
+      background: color-mix(in srgb, var(--bg) 70%, transparent)!important;
       border-bottom:1px solid var(--border);
+    }
+
+    .navbar .navbar-brand{
+      color: var(--text) !important;
+      letter-spacing: -0.02em;
     }
 
     .nav-link {
@@ -53,6 +66,15 @@
       color:var(--text)!important;
     }
 
+    a{
+      color: color-mix(in srgb, var(--brand) 90%, var(--text));
+      text-decoration-color: color-mix(in srgb, var(--brand) 50%, transparent);
+      text-underline-offset: .18em;
+    }
+    a:hover{
+      color: var(--brand);
+    }
+
     .gradient-hero {
       background:
         radial-gradient(1200px 600px at 50% -10%,
@@ -60,8 +82,13 @@
         rgba(139,92,246,.12) 40%,
         rgba(14,165,233,0) 70%),
         linear-gradient(180deg,
-        rgba(15,23,42,.6),
+        var(--hero-overlay),
         rgba(15,23,42,0));
+    }
+
+    .lead, p, li{
+      color: color-mix(in srgb, var(--text) 85%, var(--muted));
+      line-height: 1.7;
     }
 
     .section-title {
@@ -73,14 +100,15 @@
       background:var(--card);
       border:1px solid var(--border);
       box-shadow:var(--shadow);
+      border-radius: var(--radius);
     }
 
     .tag {
       display:inline-block;
       padding:.35rem .6rem;
       border-radius:999px;
-      background:rgba(14,165,233,.12);
-      color:var(--text);
+      background: color-mix(in srgb, var(--brand) 18%, transparent);
+      color: color-mix(in srgb, var(--text) 92%, var(--muted));
       border:1px solid var(--border);
       font-size:.8rem;
       margin:.2rem;
@@ -97,21 +125,33 @@
       border:1px solid var(--border);
       color:var(--text);
       background:transparent;
+      border-radius: 999px;
     }
     .btn-ghost:hover {
       background:var(--card);
     }
 
-    /* HARD FIX: text contrast */
-    [data-bs-theme="dark"] .card,
-    [data-bs-theme="dark"] .card * {
-      color:var(--text)!important;
-      opacity:1!important;
+    .btn-ghost:focus{
+      box-shadow: var(--ring);
+    }
+
+    .card b{
+      color: var(--text);
+    }
+
+    /* Navbar offset so anchor jumps don't hide headings */
+    section{
+      scroll-margin-top: 92px;
+    }
+
+    /* Small polish */
+    ::selection{
+      background: color-mix(in srgb, var(--brand) 35%, transparent);
     }
   </style>
 </head>
 
-<body data-bs-theme="dark">
+<body>
 
 <!-- NAV -->
 <nav class="navbar navbar-expand-lg fixed-top">
@@ -123,6 +163,11 @@
       <li class="nav-item"><a class="nav-link" href="#experience">Experience</a></li>
       <li class="nav-item"><a class="nav-link" href="#projects">Projects</a></li>
       <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+      <li class="nav-item ms-2">
+        <button id="themeToggle" class="btn btn-sm btn-ghost" type="button" aria-label="Toggle theme">
+          <span id="themeIcon" class="bi bi-moon-stars"></span>
+        </button>
+      </li>
       <li class="nav-item ms-2">
         <button id="langEN" class="btn btn-sm btn-ghost">EN</button>
         <button id="langTR" class="btn btn-sm btn-ghost">TR</button>
@@ -247,6 +292,25 @@
 </section>
 
 <script>
+const THEME_KEY = "theme";
+const themeColorMeta = document.querySelector('meta[name="theme-color"]');
+
+function applyTheme(theme){
+  document.body.setAttribute("data-bs-theme", theme);
+  localStorage.setItem(THEME_KEY, theme);
+  const isDark = theme === "dark";
+  const icon = document.getElementById("themeIcon");
+  if (icon) icon.className = isDark ? "bi bi-sun" : "bi bi-moon-stars";
+  if (themeColorMeta) themeColorMeta.setAttribute("content", isDark ? "#0b1220" : "#f8fafc");
+}
+
+function initTheme(){
+  const saved = localStorage.getItem(THEME_KEY);
+  if (saved === "dark" || saved === "light") return applyTheme(saved);
+  const prefersDark = window.matchMedia && window.matchMedia("(prefers-color-scheme: dark)").matches;
+  applyTheme(prefersDark ? "dark" : "light");
+}
+
 const about = {
   en: "I’m an AI Engineer and Data Scientist focused on building accurate, robust, and production-ready AI systems.",
   tr: "Doğru, dayanıklı ve üretim seviyesinde yapay zekâ sistemleri geliştiren bir Yapay Zekâ Mühendisiyim."
@@ -259,6 +323,12 @@ setLang("en");
 
 document.getElementById("langEN").onclick = () => setLang("en");
 document.getElementById("langTR").onclick = () => setLang("tr");
+
+initTheme();
+document.getElementById("themeToggle").onclick = () => {
+  const current = document.body.getAttribute("data-bs-theme") || "light";
+  applyTheme(current === "dark" ? "light" : "dark");
+};
 </script>
 
 </body>
