--- a/index.html
+++ b/index.html
@@ -148,6 +148,25 @@
     ::selection{
       background: color-mix(in srgb, var(--brand) 35%, transparent);
     }
+
+    .hero-link{
+      display:inline-flex;
+      align-items:center;
+      gap:.45rem;
+      padding:.35rem .65rem;
+      border-radius:999px;
+      border:1px solid var(--border);
+      background: color-mix(in srgb, var(--card) 65%, transparent);
+      color: var(--text);
+      text-decoration: none;
+      font-weight: 500;
+    }
+    .hero-link:hover{
+      border-color: color-mix(in srgb, var(--brand) 45%, var(--border));
+      background: color-mix(in srgb, var(--brand) 10%, var(--card));
+      color: var(--text);
+      text-decoration: none;
+    }
   </style>
 </head>
 
@@ -187,15 +206,15 @@
           Building reliable AI for real-world impact.
         </h1>
         <p id="hero-sub" class="lead mt-3">
-          Production-grade machine learning across medical imaging,
+          Production-grade machine learning across computer vision,
+          2D/3D segmentation, medical imaging,
           cybersecurity, fintech, and energy.
         </p>
         <div class="mt-4">
           <a id="cv-en" href="/Okan_Olgun_resume.pdf" class="btn btn-ghost btn-lg me-2">Download CV (EN)</a>
           <a id="cv-tr" href="/Okan_Olgun_ozgecmis.pdf" class="btn btn-ghost btn-lg me-2">Download CV (TR)</a>
-          <a href="https://github.com/okanolgun" class="btn btn-ghost btn-lg me-2">GitHub</a>
-          <a href="https://www.linkedin.com/in/okanolgun06/" class="btn btn-ghost btn-lg">LinkedIn</a>
         </div>
+        <div id="hero-links" class="mt-3 d-flex flex-wrap gap-3"></div>
       </div>
       <div class="col-lg-6 text-center">
         <img src="/avatar.jpg" class="hero-img" alt="Okan Olgun">
@@ -265,13 +284,6 @@
     <p><i class="bi bi-envelope me-2"></i>oknolgn28@gmail.com</p>
     <p><i class="bi bi-telephone me-2"></i>+90 543 933 3676</p>
     <p><i class="bi bi-geo-alt me-2"></i><span id="contact-location">Ankara, Turkey</span></p>
-    <p class="mt-3">
-      <a class="me-3" href="https://www.linkedin.com/in/okanolgun06/" target="_blank" rel="noreferrer">LinkedIn</a>
-      <a class="me-3" href="https://github.com/okanolgun" target="_blank" rel="noreferrer">GitHub</a>
-      <a class="me-3" href="https://scholar.google.com/" target="_blank" rel="noreferrer">Google Scholar</a>
-      <a class="me-3" href="https://www.researchgate.net/" target="_blank" rel="noreferrer">ResearchGate</a>
-      <a class="me-3" href="https://medium.com/" target="_blank" rel="noreferrer">Medium</a>
-    </p>
   </div>
 </section>
 
@@ -303,6 +315,13 @@ const content = {
       title: "Gerçek dünyada etki üreten güvenilir yapay zekâ.",
       sub: "Tıbbi görüntüleme, siber güvenlik, fintech ve enerji alanlarında üretim seviyesinde makine öğrenmesi."
     },
+    links: [
+      { label:"LinkedIn", icon:"bi-linkedin", href:"https://www.linkedin.com/in/okanolgun06/" },
+      { label:"GitHub", icon:"bi-github", href:"https://github.com/okanolgun" },
+      { label:"Google Scholar", icon:"bi-mortarboard", href:"https://scholar.google.com/" },
+      { label:"ResearchGate", icon:"bi-journal-text", href:"https://www.researchgate.net/" },
+      { label:"Medium", icon:"bi-medium", href:"https://medium.com/" }
+    ],
     sections: { about:"Özet", focus:"Temel Yetkinlikler", experience:"İş Deneyimi", projects:"Seçili Projeler", education:"Eğitim", additional:"Ek Deneyimler", volunteering:"Sosyal Sorumluluk", contact:"İletişim" },
     about:
       "3B bilgisayarlı görü, doğal dil işleme (NLP) ve uçtan uca makine öğrenmesi sistemleri alanlarında uygulamalı deneyime sahip bir Yapay Zekâ Mühendisiyim. Savunma sanayii ve tıbbi görüntüleme başta olmak üzere 3B segmentasyon ve ileri seviye bilgisayarlı görü mimarileri üzerine çalışıyorum. Veri hazırlamadan model geliştirme, doğrulama ve üretim ortamına alma süreçlerini kapsayan ML sistemleri geliştirdim. Akademik çalışmalar ile üretim kısıtlarını bir araya getiren projelerde görev aldım ve küçük araştırma ekiplerinin teknik süreçlerini yönettim. Gerçek dünyada ölçülebilir etki üreten uygulamalı yapay zekâ sistemlerine odaklanıyorum.",
@@ -402,6 +421,13 @@ const content = {
       title: "Building reliable AI for real-world impact.",
       sub: "Production-grade machine learning across medical imaging, cybersecurity, fintech, and energy."
     },
+    links: [
+      { label:"LinkedIn", icon:"bi-linkedin", href:"https://www.linkedin.com/in/okanolgun06/" },
+      { label:"GitHub", icon:"bi-github", href:"https://github.com/okanolgun" },
+      { label:"Google Scholar", icon:"bi-mortarboard", href:"https://scholar.google.com/" },
+      { label:"ResearchGate", icon:"bi-journal-text", href:"https://www.researchgate.net/" },
+      { label:"Medium", icon:"bi-medium", href:"https://medium.com/" }
+    ],
     sections: { about:"Summary", focus:"Core Skills", experience:"Experience", projects:"Selected Projects", education:"Education", additional:"Additional Experience", volunteering:"Social Responsibility & Community Engagement", contact:"Contact" },
     about:
       "Applied AI Engineer with hands-on experience in 3D computer vision, NLP, and end-to-end machine learning systems. Specialized in 3D segmentation and advanced computer vision architectures, including defense-sector and medical imaging use cases. Proven track record in building production-ready ML pipelines, from data preparation to model development, validation, and deployment. Experience in bridging academic research with real-world production constraints and leading small research teams. Actively interested in applied AI systems with measurable real-world impact.",
@@ -535,6 +561,10 @@ function setLang(lang){
   document.getElementById("hero-badge").textContent = c.hero.badge;
   document.getElementById("hero-title").textContent = c.hero.title;
   document.getElementById("hero-sub").textContent = c.hero.sub;
+  document.getElementById("hero-links").innerHTML = (c.links || []).map(l => {
+    const icon = l.icon ? `<i class="bi ${escapeHtml(l.icon)}"></i>` : "";
+    return `<a class="hero-link" href="${escapeHtml(l.href)}" target="_blank" rel="noreferrer">${icon}<span>${escapeHtml(l.label)}</span></a>`;
+  }).join("");
 
   // section titles
   document.getElementById("about-title").textContent = c.sections.about;
@@ -570,6 +600,3 @@ document.getElementById("themeToggle").onclick = () => {
 
 </body>
 </html>
-
-
-    
