--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@ const content = {
     hero: {
       badge: "AI Engineer • Data Scientist",
       title: "Building reliable AI for real-world impact.",
-      sub: "Production-grade machine learning across medical imaging, cybersecurity, fintech, and energy."
+      sub: "Production-grade machine learning across computer vision, 2D/3D segmentation medical imaging, cybersecurity, fintech, and energy."
     },
     links: [
       { label:"LinkedIn", icon:"bi-linkedin", href:"https://www.linkedin.com/in/okanolgun06/" },
