Update hero section subtitle in index.html

--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@ const content = {
     hero: {
       badge: "Yapay Zekâ Mühendisi • Veri Bilimci",
       title: "Gerçek dünyada etki üreten güvenilir yapay zekâ.",
-      sub: "Tıbbi görüntüleme, siber güvenlik, fintech ve enerji alanlarında üretim seviyesinde makine öğrenmesi."
+      sub: "Bilgisayarlı görme, 2D/3D segmentasyon, tıbbi görüntüleme, siber güvenlik, fintech ve enerji alanlarında üretim seviyesinde makine öğrenimi."
     },
     links: [
       { label:"LinkedIn", icon:"bi-linkedin", href:"https://www.linkedin.com/in/okanolgun06/" },
